--- a/frontend/allpack/layout/navbar.ejs
+++ b/frontend/allpack/layout/navbar.ejs
@@ -34,8 +34,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link <%= activePage === 'packages' ? 'active' : '' %>" href="/packages">
-            <i class="fas fa-gift me-1"></i> Packages
+          <a class="nav-link <%= activePage === 'services' ? 'active' : '' %>" href="/services">
+            <i class="fas fa-gift me-1"></i> Services
           </a>
         </li>
         <li class="nav-item">
