--- a/frontend/home_packages/pack.ejs
+++ b/frontend/home_packages/pack.ejs
@@ -1192,8 +1192,20 @@
   <% link = '/decor'; %>
 <% } else if (file.title === 'Invitation') { %>
   <% link = '/invitation'; %>
-<% } else if (file.title === 'Venues') { %>
-  <% link = '/venues'; %>
+<% } else if (file.title === 'Dresses') { %>
+  <% link = '/dresses'; %>
+<% } else if (file.title === 'm.c') { %>
+  <% link = '/mc'; %>
+<% } else if (file.title === 'Troupe') { %>
+  <% link = '/troupe'; %>
+<% } else if (file.title === 'sound') { %>
+  <% link = '/sound'; %>
+<% } else if (file.title === 'Photography') { %>
+  <% link = '/photographers'; %>
+<% } else if (file.title === 'Catering') { %>
+  <% link = '/catering'; %>
+<% } else if (file.title === 'Hospitality') { %>
+  <% link = '/hospitality'; %>       
 <% } %>
 
 <a href="<%= link %>" class="card-link">
